# radicalize

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
radicalize/: __init__.py  __main__.py  cli.py  envconfig.py  loader.py  models.py  pair_merge.py  paths.py  radicale_client.py  runner.py
radicalize/sync/: google.py  ics.py
tests/: conftest.py  test_cli.py  test_envconfig.py  test_loader.py  test_models.py  test_pair_merge.py  test_paths.py  test_radicale_client.py  test_runner.py
