[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radicalize"
version = "0.2.0"
description = "Supervisor that syncs upstream calendars (Google, ICS) into a Radicale server"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.25.0",
    "icalendar>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[project.scripts]
radicalize = "radicalize.cli:app"

[tool.setuptools.packages.find]
include = ["radicalize*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
